src/objects/ChatterMessanger__c.object
<CustomObject>
    <fields>
        <fullName>Chat_History__c</fullName>
        <label>Chat History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_User__c</fullName>
        <label>Chatter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChatterMessangers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Disturb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invisible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ChatterMessanger</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChatterMessangers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>